fixed issue with tag control not showing up for new recipes.

--- a/simple_recipes/static/style.css
+++ b/simple_recipes/static/style.css
@@ -96,7 +96,8 @@ textarea, input[type="text"],
         input[type="number"],
         input[type="search"],
         input[type="file"],
-        input[type="password"]
+        input[type="password"],
+        select
 {
 	display : block;
 	margin-top : 0.5em;
